# KalashnikovProject1

./: Kalashnikov2.ipynb  Kalashnikov3.ipynb  README.md  config.yaml  data_check.py  main.py  pipeline_state.json  pyproject.toml  zxcvbnm,.txt
catboost_info/: catboost_training.json  learn_error.tsv  test_error.tsv  time_left.tsv
catboost_info/learn/: events.out.tfevents
catboost_info/test/: events.out.tfevents
data/interim/: combined.csv
data/processed/: clear.csv  features.csv  filtered.csv  output.csv  production_plan.csv
data/raw/: consumption.csv  task.csv  task_v2_check.csv
kalashnikov_task1/: clear.csv
models/: baselines.joblib  calibrated_norms.joblib  catboost_model  catboost_model.cbm  constant_model.joblib  encoders.joblib  final_ratio.joblib  lightgbm_model  lightgbm_model.pkl  mat_le.joblib  norms.joblib  numeric_model.joblib  prod_pivot.joblib  ratio_model.joblib  xgboost_model  xgboost_model.pkl
reports/: comparison_metrics.csv  metrics.csv
src/: cache_utils.py  models_utils.py  stages.py
